# pyexpose

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  constants.py  expose.py  requirements.txt  teste-gs.py
src/py_expose/: expose.py
src/py_expose_html/: expose.py  version.py
tests/: mock_data.html  test_expose.py
