[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyExposeHtml"
version = "0.0.2"
authors = [
  { name="Joao Paulo de Castro Lima", email="joao@paulo.com" },
]
description = "A package that helps you to scrap web pages. It shows you a lot of information about the page."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/joao2391/pyexpose"
Issues = "https://github.com/joao2391/pyexpose/issues"